user img update

--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -5,37 +5,38 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>회원가입</title>
+  <title>냥이톡-로그인</title>
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="overflow-y-hidden">
-  <div class="w-full h-[950px] flex justify-center items-center bg-gray-100">
-    <div class="flex w-[1300px] h-[750px] border rounded-3xl bg-white shadow-lg">
-      <div class="w-[900px] h-[750px] p-28 pl-36">
+  <form  method="post" action="/login" class="w-full h-[950px] flex justify-center items-center bg-purple-200 bg-opacity-80">
+    <div class="flex w-[1300px] h-[730px]  rounded-3xl shadow1">
+      <div class="w-[900px] h-[730px] p-28 pl-36 rounded-tl-3xl rounded-bl-3xl bg-white ">
 
         <p class="font-neoeb text-[28px] pb-5 pt-14">로그인</p>
         
         <p class="font-neom text-[16px] text-gray-400">이메일</p>
-        <input class="mb-5 w-[300px]  h-[48px] p-2 border border-white bg-gray-50 rounded-md user-id" type="text" name="email">
+        <input class="mb-3 w-[300px]  h-[48px] p-2 border border-white bg-gray-50 rounded-md user-id" type="text" name="email">
         <p class="font-neom text-[16px] text-gray-400">비밀번호</p>
         <input class="mb-10 w-[300px]  h-[48px] p-2 border border-white bg-gray-50 rounded-md user-pw" type="password" name="passwd">
         
-        <div class="flex justify-center items-center w-[300px] h-[50px] p-2 border bg-purple-200   rounded-md user-pw mb-2">
+        <button class="flex justify-center items-center w-[300px] h-[50px] p-2 border bg-purple-200   rounded-md user-pw mb-2">
           <p class="font-neob text-[16px] text-white">로그인</p>
           
-        </div>
-        <div class="flex justify-center items-center w-[300px] h-[50px] p-2 border bg-purple-200   rounded-md user-pw">
-          <p class="font-neob text-[16px] text-white">회원가입</p>
+        </button>
+        <button type="button" onclick="location.href='/register'" class="flex justify-center items-center w-[300px] h-[50px] p-2 border bg-purple-200   rounded-md user-pw">
+          <p   class="font-neob text-[16px] text-white">회원가입</p>
           
-        </div>
+        </button>
       </div>
       <div
-        class="relative w-[1230px] h-[750px]  rounded-t-3xl rounded-b-3xl bg-gradient-to-b from-purple-200  to-pink-100">
-        <img src="asset/5.png" class="absolute mt-28"></img>
+        class="relative w-[1230px] h-[730px]  rounded-tr-3xl rounded-br-3xl  bg-white bg-opacity-50">
+        <img src="asset/3.png" class="absolute mt-36 w-[560px] ml-12"></img>
       </div>
     </div>
-  </div>
+  </form>
 
 
   <!-- <div class=" w-[400px] h-[650px] rounded-2xl shadow-xl bg-white"></div> -->
