--- a/public/views/profile.ejs
+++ b/public/views/profile.ejs
@@ -11,106 +11,135 @@
 </head>
 
 <body class="overflow-y-hidden">
-  <div class="w-full h-[950px] flex justify-center items-center bg-gray-100">
+  <div class="modal  flex absolute z-10  w-full   h-[950px] justify-center items-center ">
+    <div class="flex items-center justify-center w-full bg-white h-80 bg-opacity-80">
+      <p class="text-[50px] font-neom text-gray-700  ">회원가입 완료</p>
+    </div>
+  </div>
+  <div class="w-full h-[950px] flex justify-center items-center bg-gray-100 profile-wrap">
+
     <div class="flex w-[1300px] h-[730px]  rounded-3xl bg-white shadow1 flex-col  items-center ">
 
-      <p class="font-neoeb text-[28px] pb-5   mt-24 mb-10">프로필을 선택해주세요</p>
+      <p class="font-neoeb text-[28px]  w-[1150px]  mt-20 mb-14 border-b pb-2 ">프로필을 선택해주세요</p>
       <div class="flex ">
         <div class="relative cursor-pointer group">
           <img src="asset/user1.png" class="w-48 h-48 bg-[#F2E4DC] bg-opacity-60 rounded-full " alt="">
-          <div class="absolute top-0 w-48 h-48 duration-500 rounded-full opacity-40 group-hover:bg-black"></div>
-          <p
-            class=" absolute top-0 pl-16 pt-16 font-neob text-[40px] text-transparent  duration-500  group-hover:text-white">
-            호두</p>
+          <div class="absolute top-0 w-48 h-48 duration-500 rounded-full opacity-40 group-hover:bg-purple-200"></div>
+          <div class="absolute top-0 flex items-center justify-center w-48 h-48 ">
+            <p class="name     font-neob text-[33px] text-transparent  duration-500  group-hover:text-white">
+            </p>
+          </div>
+
         </div>
         <div class="relative cursor-pointer group">
           <img src="asset/user2.png" class="w-48 h-48 ml-4 bg-[#F2E8B3] bg-opacity-80 rounded-full" alt="">
-          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-black"></div>
-          <p
-            class=" absolute top-0 pl-20 pt-16 font-neob text-[40px] text-transparent  duration-500  group-hover:text-white">
-            코코</p>
+          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-purple-200">
+          </div>
+          <div class="absolute top-0 flex items-center justify-center w-48 h-48 ml-4 ">
+            <p class="name     font-neob text-[33px] text-transparent  duration-500  group-hover:text-white">
+            </p>
+          </div>
         </div>
 
         <div class="relative cursor-pointer group">
 
           <img src="asset/user3.png" class="w-48 h-48 ml-4 bg-[#B5D991] bg-opacity-60 rounded-full" alt="">
-          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-black"></div>
-          <p
-            class=" absolute top-0 pl-20  pt-16 font-neob text-[40px] text-transparent  duration-500  group-hover:text-white">
-            호두</p>
+          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-purple-200">
+          </div>
+          <div class="absolute top-0 flex items-center justify-center w-48 h-48 ml-4">
+            <p class="name     font-neob text-[33px] text-transparent  duration-500  group-hover:text-white">
+            </p>
+          </div>
         </div>
 
         <div class="relative cursor-pointer group">
           <img src="asset/user4.png" class="w-48 h-48 ml-4 bg-[#8C625E] bg-opacity-60 rounded-full" alt="">
-          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-black"></div>
-          <p
-            class=" absolute top-0 pl-20  pt-16 font-neob text-[40px] text-transparent  duration-500  group-hover:text-white">
-            호두</p>
+          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-purple-200">
+          </div>
+          <div class="absolute top-0 flex items-center justify-center w-48 h-48 ml-4">
+            <p class="name     font-neob text-[33px] text-transparent  duration-500  group-hover:text-white">
+            </p>
+          </div>
         </div>
 
         <div class="relative cursor-pointer group">
           <img src="asset/user5.png" class="w-48 h-48 ml-4 bg-[#D9BD6A] bg-opacity-40 rounded-full" alt="">
-          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-black"></div>
-          <p
-            class=" absolute top-0 pl-20  pt-16 font-neob text-[40px] text-transparent  duration-500  group-hover:text-white">
-            호두</p>
+          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-purple-200">
+          </div>
+          <div class="absolute top-0 flex items-center justify-center w-48 h-48 ml-4">
+            <p class="name     font-neob text-[33px] text-transparent  duration-500  group-hover:text-white">
+            </p>
+          </div>
         </div>
 
         <div class="relative cursor-pointer group">
           <img src="asset/user6.png" class="w-48 h-48 ml-4 bg-[#8C786C] rounded-full" alt="">
-          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-black"></div>
-          <p
-            class=" absolute top-0 pl-20  pt-16 font-neob text-[40px] text-transparent  duration-500  group-hover:text-white">
-            호두</p>
+          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-purple-200">
+          </div>
+          <div class="absolute top-0 flex items-center justify-center w-48 h-48 ml-4">
+            <p class="name     font-neob text-[33px] text-transparent  duration-500  group-hover:text-white">
+            </p>
+          </div>
         </div>
       </div>
       <div class="flex mt-4">
         <div class="relative cursor-pointer group">
           <img src="asset/user7.png" class="w-48 h-48 bg-yellow-100 rounded-full" alt="">
-          <div class="absolute top-0 w-48 h-48 duration-500 rounded-full opacity-40 group-hover:bg-black"></div>
-          <p
-            class=" absolute top-0 pl-16 pt-16 font-neob text-[40px] text-transparent  duration-500  group-hover:text-white">
-            호두</p>
+          <div class="absolute top-0 w-48 h-48 duration-500 rounded-full opacity-40 group-hover:bg-purple-200"></div>
+          <div class="absolute top-0 flex items-center justify-center w-48 h-48 ">
+            <p class="name     font-neob text-[33px] text-transparent  duration-500  group-hover:text-white">
+            </p>
+          </div>
         </div>
         <div class="relative cursor-pointer group">
           <img src="asset/user8.png" class="w-48 h-48 ml-4 bg-[#B3E7F2] bg-opacity-60 rounded-full" alt="">
-          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-black"></div>
-          <p
-            class=" absolute top-0 pl-20 pt-16 font-neob text-[40px] text-transparent  duration-500  group-hover:text-white">
-            코코</p>
+          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-purple-200">
+          </div>
+          <div class="absolute top-0 flex items-center justify-center w-48 h-48 ml-4">
+            <p class="name     font-neob text-[33px] text-transparent  duration-500  group-hover:text-white">
+            </p>
+          </div>
         </div>
 
         <div class="relative cursor-pointer group">
 
           <img src="asset/user9.png" class="w-48 h-48 ml-4 bg-[#BFB4B0] bg-opacity-60 rounded-full" alt="">
-          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-black"></div>
-          <p
-            class=" absolute top-0 pl-20  pt-16 font-neob text-[40px] text-transparent  duration-500  group-hover:text-white">
-            호두</p>
+          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-purple-200">
+          </div>
+          <div class="absolute top-0 flex items-center justify-center w-48 h-48 ml-4">
+            <p class="name     font-neob text-[33px] text-transparent  duration-500  group-hover:text-white">
+            </p>
+          </div>
         </div>
 
         <div class="relative cursor-pointer group">
           <img src="asset/user10.png" class="w-48 h-48 ml-4 bg-[#F2BBC5] bg-opacity-60 rounded-full" alt="">
-          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-black"></div>
-          <p
-            class=" absolute top-0 pl-20  pt-16 font-neob text-[40px] text-transparent  duration-500  group-hover:text-white">
-            호두</p>
+          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-purple-200">
+          </div>
+          <div class="absolute top-0 flex items-center justify-center w-48 h-48 ml-4">
+            <p class="name     font-neob text-[33px] text-transparent  duration-500  group-hover:text-white">
+            </p>
+          </div>
         </div>
 
         <div class="relative cursor-pointer group">
           <img src="asset/user11.png" class="w-48 h-48 ml-4 bg-[#736F3F] bg-opacity-40 rounded-full" alt="">
-          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-black"></div>
-          <p
-            class=" absolute top-0 pl-20  pt-16 font-neob text-[40px] text-transparent  duration-500  group-hover:text-white">
-            호두</p>
+          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-purple-200">
+          </div>
+          <div class="absolute top-0 flex items-center justify-center w-48 h-48 ml-4">
+            <p class="name     font-neob text-[33px] text-transparent  duration-500  group-hover:text-white">
+            </p>
+          </div>
         </div>
 
         <div class="relative cursor-pointer group">
           <img src="asset/user12.png" class="w-48 h-48 ml-4 bg-[#F2EFEB] rounded-full" alt="">
-          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-black"></div>
-          <p
-            class=" absolute top-0 pl-20  pt-16 font-neob text-[40px] text-transparent  duration-500  group-hover:text-white">
-            호두</p>
+          <div class="absolute top-0 w-48 h-48 ml-4 duration-500 rounded-full opacity-40 group-hover:bg-purple-200">
+          </div>
+          <div class="absolute top-0 flex items-center justify-center w-48 h-48 ml-4">
+            <p class="name     font-neob text-[33px] text-transparent  duration-500  group-hover:text-white">
+            </p>
+          </div>
         </div>
       </div>
 
@@ -120,10 +149,10 @@
     </div>
   </div>
 
- 
 
 
-  <script type="module" src="/js/register.js"></script>
+
+  <script type="module" src="/js/profile.js"></script>
 </body>
 
 </html>
