--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -5,32 +5,35 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>회원가입</title>
+  <title>냥이톡-회원가입</title>
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="overflow-y-hidden">
-  <div class="w-full h-[950px] flex justify-center items-center bg-gray-100">
-    <div class="flex w-[1300px] h-[730px]  rounded-3xl bg-white shadow1">
-      <div class="w-[900px] h-[730px] p-28 pl-36">
+  <div class="modal  flex absolute z-10  w-full   h-[950px] justify-center items-center " >
+    <div class="flex items-center justify-center w-full bg-white h-80 bg-opacity-80"><p class="text-[50px] font-neom text-gray-700  ">회원가입 완료</p></div>
+  </div>
+  <div     class="w-full h-[950px] flex justify-center items-center   bg-purple-200 bg-opacity-80">
+    <div class="flex w-[1300px] h-[730px]   rounded-3xl shadow1">
+      <div class="w-[900px] h-[730px] p-28 pl-36 rounded-tl-3xl rounded-bl-3xl bg-white ">
 
         <p class="font-neoeb text-[28px] pb-5">회원가입</p>
         <p class="font-neom text-[16px] text-gray-400">별명</p>
-        <input class="mb-5 w-[300px] h-[48px] p-2 border  rounded-md user-name border-white bg-gray-50" type="text" name="name">
+        <input class="mb-3 w-[300px] h-[48px] p-2 border  rounded-md user-name border-white bg-gray-50" type="text" name="name">
         <p class="font-neom text-[16px] text-gray-400">이메일</p>
-        <input class="mb-5 w-[300px]  h-[48px] p-2 border border-white bg-gray-50 rounded-md user-id" type="text" name="email">
+        <input class="mb-3 w-[300px]  h-[48px] p-2 border border-white bg-gray-50 rounded-md user-id" type="text" name="email">
         <p class="font-neom text-[16px] text-gray-400">비밀번호</p>
-        <input class="mb-5 w-[300px]  h-[48px] p-2 border border-white bg-gray-50 rounded-md user-pw" type="password" name="passwd">
+        <input class="mb-3 w-[300px]  h-[48px] p-2 border border-white bg-gray-50 rounded-md user-pw" type="password" name="passwd">
         <p class="font-neom text-[16px] text-gray-400">비밀번호 확인</p>
         <input class="mb-10 w-[300px] h-[48px] p-2 border border-white bg-gray-50 rounded-md user-pw" type="password" name="passwdConfirm">
-        <div class="flex justify-center items-center w-[300px] h-[50px] p-2 border bg-purple-200   rounded-md user-pw">
-          <p class="font-neob text-[16px] text-white">회원가입</p>
-        </div>
+        <button class="flex justify-center items-center w-[300px] h-[50px] p-2 border bg-purple-200   rounded-md user-pw">
+          <p class="font-neob text-[16px] text-white">다음</p>
+        </button>
       </div>
       <div
-        class="relative w-[1230px] h-[730px]  rounded-t-3xl rounded-b-3xl bg-gradient-to-b from-purple-200  to-pink-100">
-        <img src="asset/4.png" class="absolute mt-28"></img>
+        class="relative w-[1230px] h-[730px]  rounded-tr-3xl rounded-br-3xl  bg-white bg-opacity-50">
+        <img src="asset/2.png" class="absolute mt-28 w-[550px] ml-14"></img>
       </div>
     </div>
   </div>
