--- a/public/css/index.css
+++ b/public/css/index.css
@@ -589,9 +589,6 @@ video {
 .left-\[18px\] {
 	left: 18px;
 }
-.top-1 {
-	top: 0.25rem;
-}
 .top-0 {
 	top: 0px;
 }
@@ -625,14 +622,17 @@ video {
 .mt-1 {
 	margin-top: 0.25rem;
 }
-.mb-5 {
-	margin-bottom: 1.25rem;
+.mb-3 {
+	margin-bottom: 0.75rem;
 }
 .mb-10 {
 	margin-bottom: 2.5rem;
 }
-.mt-28 {
-	margin-top: 7rem;
+.mt-36 {
+	margin-top: 9rem;
+}
+.ml-12 {
+	margin-left: 3rem;
 }
 .mb-1 {
 	margin-bottom: 0.25rem;
@@ -652,59 +652,26 @@ video {
 .ml-14 {
 	margin-left: 3.5rem;
 }
-.mt-36 {
-	margin-top: 9rem;
-}
 .ml-10 {
 	margin-left: 2.5rem;
-}
-.ml-96 {
-	margin-left: 24rem;
-}
-.ml-\[450px\] {
-	margin-left: 450px;
-}
-.ml-\[600px\] {
-	margin-left: 600px;
-}
-.ml-\[650px\] {
-	margin-left: 650px;
-}
-.mt-3 {
-	margin-top: 0.75rem;
-}
-.ml-4 {
-	margin-left: 1rem;
-}
-.mt-52 {
-	margin-top: 13rem;
-}
-.mt-11 {
-	margin-top: 2.75rem;
-}
-.mb-4 {
-	margin-bottom: 1rem;
-}
-.mt-10 {
-	margin-top: 2.5rem;
-}
-.mt-4 {
-	margin-top: 1rem;
-}
-.mb-6 {
-	margin-bottom: 1.5rem;
 }
 .mt-20 {
 	margin-top: 5rem;
 }
-.mt-24 {
-	margin-top: 6rem;
+.mb-14 {
+	margin-bottom: 3.5rem;
+}
+.ml-4 {
+	margin-left: 1rem;
+}
+.mt-4 {
+	margin-top: 1rem;
+}
+.mt-28 {
+	margin-top: 7rem;
 }
 .flex {
 	display: flex;
-}
-.hidden {
-	display: none;
 }
 .h-\[10vw\] {
 	height: 10vw;
@@ -730,8 +697,8 @@ video {
 .h-\[950px\] {
 	height: 950px;
 }
-.h-\[750px\] {
-	height: 750px;
+.h-\[730px\] {
+	height: 730px;
 }
 .h-\[48px\] {
 	height: 48px;
@@ -748,14 +715,8 @@ video {
 .h-\[790px\] {
 	height: 790px;
 }
-.h-\[730px\] {
-	height: 730px;
-}
-.h-32 {
-	height: 8rem;
-}
-.h-44 {
-	height: 11rem;
+.h-80 {
+	height: 20rem;
 }
 .h-48 {
 	height: 12rem;
@@ -811,6 +772,9 @@ video {
 .w-\[1230px\] {
 	width: 1230px;
 }
+.w-\[560px\] {
+	width: 560px;
+}
 .w-\[400px\] {
 	width: 400px;
 }
@@ -838,17 +802,14 @@ video {
 .w-\[960px\] {
 	width: 960px;
 }
-.w-32 {
-	width: 8rem;
-}
-.w-4 {
-	width: 1rem;
-}
-.w-44 {
-	width: 11rem;
+.w-\[1150px\] {
+	width: 1150px;
 }
 .w-48 {
 	width: 12rem;
+}
+.w-\[550px\] {
+	width: 550px;
 }
 .min-w-\[208px\] {
 	min-width: 208px;
@@ -870,6 +831,38 @@ video {
 }
 .max-w-\[200px\] {
 	max-width: 200px;
+}
+@-webkit-keyframes bounce {
+
+	0%, 100% {
+		transform: translateY(-25%);
+		-webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
+		        animation-timing-function: cubic-bezier(0.8,0,1,1);
+	}
+
+	50% {
+		transform: none;
+		-webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
+		        animation-timing-function: cubic-bezier(0,0,0.2,1);
+	}
+}
+@keyframes bounce {
+
+	0%, 100% {
+		transform: translateY(-25%);
+		-webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
+		        animation-timing-function: cubic-bezier(0.8,0,1,1);
+	}
+
+	50% {
+		transform: none;
+		-webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
+		        animation-timing-function: cubic-bezier(0,0,0.2,1);
+	}
+}
+.animate-bounce {
+	-webkit-animation: bounce 1s infinite;
+	        animation: bounce 1s infinite;
 }
 .cursor-pointer {
 	cursor: pointer;
@@ -931,16 +924,17 @@ video {
 .rounded-2xl {
 	border-radius: 1rem;
 }
-.rounded {
-	border-radius: 0.25rem;
-}
-.rounded-t-3xl {
+.rounded-tl-3xl {
 	border-top-left-radius: 1.5rem;
+}
+.rounded-bl-3xl {
+	border-bottom-left-radius: 1.5rem;
+}
+.rounded-tr-3xl {
 	border-top-right-radius: 1.5rem;
 }
-.rounded-b-3xl {
+.rounded-br-3xl {
 	border-bottom-right-radius: 1.5rem;
-	border-bottom-left-radius: 1.5rem;
 }
 .border-2 {
 	border-width: 2px;
@@ -958,6 +952,10 @@ video {
 .border-white {
 	--tw-border-opacity: 1;
 	border-color: rgba(255, 255, 255, var(--tw-border-opacity));
+}
+.border-black {
+	--tw-border-opacity: 1;
+	border-color: rgba(0, 0, 0, var(--tw-border-opacity));
 }
 .bg-gray-200 {
 	--tw-bg-opacity: 1;
@@ -995,46 +993,6 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
 }
-.bg-pink-100 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(252, 231, 243, var(--tw-bg-opacity));
-}
-.bg-yellow-100 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(254, 243, 199, var(--tw-bg-opacity));
-}
-.bg-yellow-800 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(146, 64, 14, var(--tw-bg-opacity));
-}
-.bg-yellow-600 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(217, 119, 6, var(--tw-bg-opacity));
-}
-.bg-yellow-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
-}
-.bg-yellow-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
-}
-.bg-yellow-300 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(252, 211, 77, var(--tw-bg-opacity));
-}
-.bg-pink-200 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(251, 207, 232, var(--tw-bg-opacity));
-}
-.bg-green-200 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
-}
-.bg-\[\#F2EFEB\] {
-	--tw-bg-opacity: 1;
-	background-color: rgba(242, 239, 235, var(--tw-bg-opacity));
-}
 .bg-\[\#F2E4DC\] {
 	--tw-bg-opacity: 1;
 	background-color: rgba(242, 228, 220, var(--tw-bg-opacity));
@@ -1051,14 +1009,6 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(140, 98, 94, var(--tw-bg-opacity));
 }
-.bg-\[\#F299A9\] {
-	--tw-bg-opacity: 1;
-	background-color: rgba(242, 153, 169, var(--tw-bg-opacity));
-}
-.bg-\[\#BF846F\] {
-	--tw-bg-opacity: 1;
-	background-color: rgba(191, 132, 111, var(--tw-bg-opacity));
-}
 .bg-\[\#D9BD6A\] {
 	--tw-bg-opacity: 1;
 	background-color: rgba(217, 189, 106, var(--tw-bg-opacity));
@@ -1067,9 +1017,9 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(140, 120, 108, var(--tw-bg-opacity));
 }
-.bg-\[\#D99A4E\] {
+.bg-yellow-100 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(217, 154, 78, var(--tw-bg-opacity));
+	background-color: rgba(254, 243, 199, var(--tw-bg-opacity));
 }
 .bg-\[\#B3E7F2\] {
 	--tw-bg-opacity: 1;
@@ -1087,27 +1037,24 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(115, 111, 63, var(--tw-bg-opacity));
 }
-.bg-black {
+.bg-\[\#F2EFEB\] {
 	--tw-bg-opacity: 1;
-	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
-}
-.bg-opacity-10 {
-	--tw-bg-opacity: 0.1;
-}
-.bg-opacity-60 {
-	--tw-bg-opacity: 0.6;
-}
-.bg-opacity-50 {
-	--tw-bg-opacity: 0.5;
-}
-.bg-opacity-40 {
-	--tw-bg-opacity: 0.4;
+	background-color: rgba(242, 239, 235, var(--tw-bg-opacity));
 }
 .bg-opacity-80 {
 	--tw-bg-opacity: 0.8;
 }
-.bg-opacity-20 {
-	--tw-bg-opacity: 0.2;
+.bg-opacity-50 {
+	--tw-bg-opacity: 0.5;
+}
+.bg-opacity-60 {
+	--tw-bg-opacity: 0.6;
+}
+.bg-opacity-40 {
+	--tw-bg-opacity: 0.4;
+}
+.bg-opacity-70 {
+	--tw-bg-opacity: 0.7;
 }
 .bg-gradient-to-b {
 	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
@@ -1116,29 +1063,11 @@ video {
 	--tw-gradient-from: #ddd6fe;
 	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(221, 214, 254, 0));
 }
-.from-pink-200 {
-	--tw-gradient-from: #fbcfe8;
-	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(251, 207, 232, 0));
-}
-.from-yellow-200 {
-	--tw-gradient-from: #fde68a;
-	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(253, 230, 138, 0));
-}
-.from-gray-200 {
-	--tw-gradient-from: #e5e7eb;
-	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(229, 231, 235, 0));
-}
-.to-pink-100 {
-	--tw-gradient-to: #fce7f3;
-}
 .to-purple-100 {
 	--tw-gradient-to: #ede9fe;
 }
-.to-yellow-100 {
-	--tw-gradient-to: #fef3c7;
-}
-.to-gray-100 {
-	--tw-gradient-to: #f3f4f6;
+.to-pink-100 {
+	--tw-gradient-to: #fce7f3;
 }
 .p-4 {
 	padding: 1rem;
@@ -1227,33 +1156,6 @@ video {
 .pt-2 {
 	padding-top: 0.5rem;
 }
-.pl-24 {
-	padding-left: 6rem;
-}
-.pt-24 {
-	padding-top: 6rem;
-}
-.pl-20 {
-	padding-left: 5rem;
-}
-.pt-20 {
-	padding-top: 5rem;
-}
-.pl-10 {
-	padding-left: 2.5rem;
-}
-.pt-10 {
-	padding-top: 2.5rem;
-}
-.pl-14 {
-	padding-left: 3.5rem;
-}
-.pl-16 {
-	padding-left: 4rem;
-}
-.pt-16 {
-	padding-top: 4rem;
-}
 .text-center {
 	text-align: center;
 }
@@ -1317,20 +1219,11 @@ video {
 	font-size: 1rem;
 	line-height: 1.5rem;
 }
-.text-\[20px\] {
-	font-size: 20px;
-}
-.text-\[30px\] {
-	font-size: 30px;
-}
-.text-\[40px\] {
-	font-size: 40px;
-}
 .text-\[50px\] {
 	font-size: 50px;
 }
-.text-\[55px\] {
-	font-size: 55px;
+.text-\[33px\] {
+	font-size: 33px;
 }
 .text-\[\#a7a7aa\] {
 	--tw-text-opacity: 1;
@@ -1367,14 +1260,15 @@ video {
 .text-transparent {
 	color: transparent;
 }
+.text-gray-100 {
+	--tw-text-opacity: 1;
+	color: rgba(243, 244, 246, var(--tw-text-opacity));
+}
 .opacity-25 {
 	opacity: 0.25;
 }
 .opacity-20 {
 	opacity: 0.2;
-}
-.opacity-50 {
-	opacity: 0.5;
 }
 .opacity-40 {
 	opacity: 0.4;
@@ -1383,28 +1277,19 @@ video {
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.shadow-lg {
-	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
 .shadow-xl {
 	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.delay-200 {
-	transition-delay: 200ms;
-}
-.delay-1000 {
-	transition-delay: 1000ms;
+.shadow-lg {
+	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .duration-500 {
 	transition-duration: 500ms;
 }
 .duration-100 {
 	transition-duration: 100ms;
-}
-.duration-1000 {
-	transition-duration: 1000ms;
 }
 
 @font-face {
@@ -1443,77 +1328,12 @@ video {
     font-family:"NeoUL";
     src:url("./../asset/font/appleSDGothicNeoUL.ttf");
 } 
-.hover\:absolute:hover {
-	position: absolute;
-} 
-.hover\:top-0:hover {
-	top: 0px;
-} 
-.hover\:block:hover {
-	display: block;
-} 
-.hover\:flex:hover {
-	display: flex;
-} 
-.hover\:h-48:hover {
-	height: 12rem;
-} 
-.hover\:w-48:hover {
-	width: 12rem;
-} 
-.hover\:rounded-full:hover {
-	border-radius: 9999px;
-} 
-.hover\:bg-gray-600:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
-} 
-.hover\:bg-white:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
-} 
-.hover\:bg-black:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
-} 
-.hover\:bg-opacity-25:hover {
-	--tw-bg-opacity: 0.25;
-} 
 .hover\:bg-gradient-to-b:hover {
 	background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 } 
-.hover\:text-white:hover {
-	--tw-text-opacity: 1;
-	color: rgba(255, 255, 255, var(--tw-text-opacity));
-} 
-.hover\:text-black:hover {
-	--tw-text-opacity: 1;
-	color: rgba(0, 0, 0, var(--tw-text-opacity));
-} 
-.hover\:opacity-25:hover {
-	opacity: 0.25;
-} 
-.hover\:opacity-50:hover {
-	opacity: 0.5;
-} 
-.group:hover .group-hover\:absolute {
-	position: absolute;
-} 
-.group:hover .group-hover\:bg-black {
+.group:hover .group-hover\:bg-purple-200 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
-} 
-.group:hover .group-hover\:bg-white {
-	--tw-bg-opacity: 1;
-	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
-} 
-.group:hover .group-hover\:bg-gray-700 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
-} 
-.group:hover .group-hover\:text-black {
-	--tw-text-opacity: 1;
-	color: rgba(0, 0, 0, var(--tw-text-opacity));
+	background-color: rgba(221, 214, 254, var(--tw-bg-opacity));
 } 
 .group:hover .group-hover\:text-white {
 	--tw-text-opacity: 1;
